--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <style>
+        h1 {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+        }
+        #descricao {
+            font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
 </head>
 <body>
     <ul>
@@ -13,10 +21,10 @@
     </ul>
     <h1>ELCIO RODRIGO DE AZEVEDO</h1>
     <img id="foto" src="image.jpeg" alt="Elcio Rodrigo de Azevedo olhando para frente" width="300">
-    <p>Sou brasileiro nascido em Santo André no estado de São Paulo e atualmente resido na cidade de Natal no Rio Grande do Norte</p>
-    <p>Gosto muito da <strong>área de tecnologia</strong> principalmente quando o assunto é <strong>programação</strong>.</p>
-    <p>Tenho muito interesse em aprender cada vez mais sobre essa área visando quando estiver capacitado ingressar no mercado de trabalho</p>
-    <p>Desde muito tempo tenho o interesse pela área mas investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
+    <p id="descricao">Sou brasileiro nascido em Santo André no estado de São Paulo e atualmente resido na cidade de Natal no Rio Grande do Norte</p>
+    <p id="descricao">Gosto muito da <strong>área de tecnologia</strong> principalmente quando o assunto é <strong>programação</strong>.</p>
+    <p id="descricao">Tenho muito interesse em aprender cada vez mais sobre essa área visando quando estiver capacitado ingressar no mercado de trabalho</p>
+    <p id="descricao">Desde muito tempo tenho o interesse pela área mas investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
     
     <h2>Habilidades Pessoais</h2>
     <p id="habilidades">Ao longo da vida algumas das habilidades que possuo são:</p>
