Definindo cor base de background

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
     <style>
+        body {
+            background: rgb(black, black, black);
+            color: white;
+        }
         h1 {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
