--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfólio Web</title>
     <style>
         body {
-            background: rgb(black, black, black);
+            background: black;
             color: white;
         }
         h1 {
