--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         #descricao {
             font-family: 'Courier New', Courier, monospace;
         }
-        #lugar {
+        em {
             font-weight: bold;
         }
     </style>
@@ -28,7 +28,7 @@
     </ul>
     <h1>ELCIO RODRIGO DE AZEVEDO</h1>
     <img id="foto" src="image.jpeg" alt="Elcio Rodrigo de Azevedo olhando para frente" width="300">
-    <p id="descricao"><em id="lugar">Sou brasileiro</em> nascido em Santo André no estado de São Paulo e atualmente resido na <em id="lugar">cidade de Natal no Rio Grande do Norte</em></p>
+    <p id="descricao"><em>Sou brasileiro</em> nascido em Santo André no estado de São Paulo e atualmente resido na <em>cidade de Natal no Rio Grande do Norte</em></p>
     <p id="descricao">Gosto muito da <strong>área de tecnologia</strong> principalmente quando o assunto é <strong>programação</strong>.</p>
     <p id="descricao">Tenho muito interesse em aprender cada vez mais sobre essa área visando quando estiver capacitado ingressar no mercado de trabalho</p>
     <p id="descricao">Desde muito tempo tenho o interesse pela área mas investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
