Tamanhos diferentes para elementos da lista habilidades

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
         em {
             font-weight: bold;
         }
+        .ler {
+            font-size: 1.2em;
+        }
+        .ouvir {
+            font-size: 1.4em;
+        }
+        .resp {
+            font-size: 1.7em;
+        }
+        .pac {
+            font-size: 2em;
+        }
     </style>
 </head>
 <body>
@@ -36,10 +48,10 @@
     <h2>Habilidades Pessoais</h2>
     <p id="habilidades">Ao longo da vida algumas das habilidades que possuo são:</p>
     <ul>
-        <li>Gostar de ler e entender o que leio</li>
-        <li>Saber ouvir e procurar ao máximo entender o que está sendo dito</li>
-        <li>Saber respeitar mesmo quando não sou respeitado</li>
-        <li>Ter paciência sempre</li>
+        <li class="ler">Gostar de ler e entender o que leio</li>
+        <li class="ouvir">Saber ouvir e procurar ao máximo entender o que está sendo dito</li>
+        <li class="resp">Saber respeitar mesmo quando não sou respeitado</li>
+        <li class="pac">Ter paciência sempre</li>
     </ul>
     <h2 id="atualidade">O que faz na atualidade</h2>
     <p>Atualmente me dedico a estudar, na área de tecnologia, <a href="https://www.betrybe.com/"><em>Desenvolvimento Web Full Stack na Trybe</em></a>. O curso terá duração de 1 ano e espero adquirir uma boa e sólida formação para ingressar no mercado de trabalho</p>
