Tamanhos diferentes para elementos da lista habilidades

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             font-weight: bold;
         }
         .ler {
-            font-size: 1.2em;
+            font-size: 13px;
         }
         .ouvir {
-            font-size: 1.4em;
+            font-size: 15px;
         }
         .resp {
-            font-size: 1.7em;
+            font-size: 17px;
         }
         .pac {
-            font-size: 2em;
+            font-size: 19px;
         }
     </style>
 </head>
