Exercicios de Layout e Box Model no Portfólio com inclusão do arquivo style.css

--- a/index.html
+++ b/index.html
@@ -3,34 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfólio Web</title>
-    <style>
-        body {
-            background: black;
-            color: white;
-        }
-        h1 {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        #descricao {
-            font-family: 'Courier New', Courier, monospace;
-        }
-        em {
-            font-weight: bold;
-        }
-        .ler {
-            font-size: 13px;
-        }
-        .ouvir {
-            font-size: 15px;
-        }
-        .resp {
-            font-size: 17px;
-        }
-        .pac {
-            font-size: 19px;
-        }
-    </style>
 </head>
 <body>
     <ul>
@@ -38,21 +12,25 @@
         <li><a href="#habilidades">Habilidades que possuo:</a></li>
         <li><a href="#atualidade">O que faz na atualidade</a></li>
     </ul>
-    <h1>ELCIO RODRIGO DE AZEVEDO</h1>
-    <img id="foto" src="image.jpeg" alt="Elcio Rodrigo de Azevedo olhando para frente" width="300">
-    <p id="descricao"><em>Sou brasileiro</em> nascido em Santo André no estado de São Paulo e atualmente resido na <em>cidade de Natal no Rio Grande do Norte</em></p>
-    <p id="descricao">Gosto muito da <strong>área de tecnologia</strong> principalmente quando o assunto é <strong>programação</strong>.</p>
-    <p id="descricao">Tenho muito interesse em aprender cada vez mais sobre essa área visando quando estiver capacitado ingressar no mercado de trabalho</p>
-    <p id="descricao">Desde muito tempo tenho o interesse pela área mas investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
+    <div id="box">
+        <h1>ELCIO RODRIGO DE AZEVEDO</h1>
+        <img id="foto" src="image.jpeg" alt="Elcio Rodrigo de Azevedo olhando para frente" width="300">
+        <p id="descricao"><em>Sou brasileiro</em> nascido em Santo André no estado de São Paulo e atualmente resido na <em>cidade de Natal no Rio Grande do Norte</em>.
+        Gosto muito da <strong>área de tecnologia</strong> principalmente quando o assunto é <strong>programação</strong>.<br>
+        Tenho muito interesse em aprender cada vez mais sobre essa área visando quando estiver capacitado ingressar no mercado de trabalho.<br>
+        Desde muito tempo tenho o interesse pela área mas já investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
+    </div>
     
-    <h2>Habilidades Pessoais</h2>
-    <p id="habilidades">Ao longo da vida algumas das habilidades que possuo são:</p>
-    <ul>
-        <li class="ler">Gostar de ler e entender o que leio</li>
-        <li class="ouvir">Saber ouvir e procurar ao máximo entender o que está sendo dito</li>
-        <li class="resp">Saber respeitar mesmo quando não sou respeitado</li>
-        <li class="pac">Ter paciência sempre</li>
-    </ul>
+    <div>
+        <h2>Habilidades Pessoais</h2>
+        <p id="habilidades">Ao longo da vida algumas das habilidades que possuo são:</p>
+        <ul>
+            <li class="ler">Gostar de ler e entender o que leio</li>
+            <li class="ouvir">Saber ouvir e procurar ao máximo entender o que está sendo dito</li>
+            <li class="resp">Saber respeitar mesmo quando não sou respeitado</li>
+            <li class="pac">Ter paciência sempre</li>
+        </ul>
+    </div>
     <h2 id="atualidade">O que faz na atualidade</h2>
     <p>Atualmente me dedico a estudar, na área de tecnologia, <a href="https://www.betrybe.com/"><em>Desenvolvimento Web Full Stack na Trybe</em></a>. O curso terá duração de 1 ano e espero adquirir uma boa e sólida formação para ingressar no mercado de trabalho</p>
 
