Resolução exercício 4.1 - incluindo uma primeira seção com informações gerais e tabular

--- a/exercises/3_4/index.html
+++ b/exercises/3_4/index.html
@@ -17,13 +17,34 @@
       </ul>
   </nav>
   <article>
+    <section>
+      <h2>Informações Gerais do Camarão Mantis: <i>Odontodactylus Scyllarus</i></h2>
+      <table>
+        <tr>
+          <td>Reino</td>
+          <td>Filo</td>
+          <td>Subfilo</td>
+          <td>Classe</td>
+          <td>Subclasse</td>
+          <td>Ordem</td>
+        </tr>
+        <tr>
+          <td>Animalia</td>
+          <td>Arthropoda</td>
+          <td>Crustacea</td>
+          <td>Malacostraca</td>
+          <td>Hoplocarida</td>
+          <td>Stomatopoda</td>
+        </tr>
+      </table>
+    </section>
     <h2>Fatos sobre o Stomatopoda</h2>
     <p>
       Impressionante é o olho de um camarão mantis - um animal marinho que não é um mantis nem um camarão, mas um parente próximo de caranguejos e lagostas. Seu olhos são compostos, feitos de milhares de pequenas unidades que cada um detecta a luz independentemente.<br>
       O camarão mantis tem de 12 a 16 fotorreceptores diferentes em seu olho. Mas eles são muito melhores em discriminar as cores do que a maioria dos outros animais! Eles parecem usar seus mais de dez receptores para reconhecer as cores de uma maneira única, muito diferente de outros animais, mas estranhamente semelhante a alguns satélites.<br>
       Esses animais ultra-violentos (camarão mantis) também podem ver ultravioleta (UV), possui seis fotorreceptores dedicados a essa parte do espectro, cada um sintonizado em um comprimento de onda diferente, um sistema de detecção de UV mais complexo encontrado na natureza.<br>
       Os camarões mantis vêem a cor com a ajuda de proteínas sensíveis à luz chamadas opsinas que formam a base de pigmentos visuais que reagem a diferentes comprimentos de onda da luz, permitindo ver cores diferentes. Se um camarão mantis tem seis receptores de UV, mas ele só tem duas opsinas sensíveis a diferentes sabores de UV.<br>
-      Curiosidades sobre o Stomatopoda: Camarões Mantis têm uma maneira única de ver; O camarão Mantis possui olhos que se assemelham a um satélite; Olhos de camarão Mantis ultrapassam os aparelhos de DVD e inspiram novas tecnologias;O camarão mantis tem o soco mais rápido do mundo que chegam a 80km/h.<br>
+      Curiosidades sobre o Stomatopoda: Camarões Mantis têm uma maneira única de ver; O camarão Mantis possui olhos que se assemelham a um satélite; Olhos de camarão Mantis ultrapassam os aparelhos de DVD e inspiram novas tecnologias;O camarão mantis tem o soco mais rápido do mundo: são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar 80km/h.<br>
     </p>
   </article>
   </body>
