--- a/exercises/3_4/index.html
+++ b/exercises/3_4/index.html
@@ -41,31 +41,31 @@
     <section>
       <h2>Fatos sobre o Stomatopoda: Olhos</h2>
       <p>
-        Impressionante é o olho de um camarão mantis - um animal marinho que não é um mantis nem um camarão, mas um parente próximo de caranguejos e lagostas. Seu olhos são compostos, feitos de milhares de pequenas unidades que cada um detecta a luz independentemente.
+        Impressionante é o olho de um camarão mantis - um animal marinho que não é um mantis nem um camarão, mas um parente próximo de caranguejos e lagostas. <strong>Seu olhos são compostos</strong>, feitos de milhares de pequenas unidades que cada um detecta a luz independentemente.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Se assemelham a satélites</h2>
       <p>
-        O camarão mantis tem de 12 a 16 fotorreceptores diferentes em seu olho. Mas eles são muito melhores em discriminar as cores do que a maioria dos outros animais! Eles parecem usar seus mais de dez receptores para reconhecer as cores de uma maneira única, muito diferente de outros animais, mas estranhamente semelhante a alguns satélites.
+        O camarão mantis tem de 12 a 16 fotorreceptores diferentes em seus olhos. Mas eles são muito melhores em discriminar as cores do que a maioria dos outros animais! Eles parecem usar seus mais de dez receptores para reconhecer as cores de uma maneira única, muito diferente de outros animais, mas estranhamente <strong>semelhante a alguns satélites</strong>.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Visão Ultra Violeta (UV)</h2>
       <p>
-        Esses animais ultra-violentos (camarão mantis) também podem ver ultravioleta (UV), possui seis fotorreceptores dedicados a essa parte do espectro, cada um sintonizado em um comprimento de onda diferente, um sistema de detecção de UV mais complexo encontrado na natureza.
+        Esses animais ultra-violentos (camarão mantis) também podem ver ultravioleta (UV), possui seis fotorreceptores dedicados a essa parte do espectro, cada um sintonizado em um comprimento de onda diferente, um <strong>sistema de detecção de UV</strong> mais complexo encontrado na natureza.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Visão com mais cores diferentes</h2>
       <p>
-        Os camarões mantis vêem a cor com a ajuda de proteínas sensíveis à luz chamadas opsinas que formam a base de pigmentos visuais que reagem a diferentes comprimentos de onda da luz, permitindo ver cores diferentes. Se um camarão mantis tem seis receptores de UV, mas ele só tem duas opsinas sensíveis a diferentes sabores de UV.
+        Os camarões mantis vêem a cor com a ajuda de proteínas sensíveis à luz chamadas opsinas que formam a base de pigmentos visuais que reagem a diferentes comprimentos de onda da luz, <strong>permitindo ver cores diferentes</strong>. Se um camarão mantis tem seis receptores de UV, mas ele só tem duas opsinas sensíveis a diferentes sabores de UV.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Em resumo...</h2>
       <p>
-        Curiosidades sobre o Stomatopoda: Camarões Mantis têm uma maneira única de ver; O camarão Mantis possui olhos que se assemelham a um satélite; Olhos de camarão Mantis ultrapassam os aparelhos de DVD e inspiram novas tecnologias;O camarão mantis tem o soco mais rápido do mundo: são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar 80km/h.
+        Curiosidades sobre o Stomatopoda: Camarões Mantis têm uma maneira única de ver; O camarão Mantis possui olhos que se assemelham a um satélite; Olhos de camarão Mantis ultrapassam os aparelhos de DVD e inspiram novas tecnologias;<strong>O camarão mantis tem o soco mais rápido do mundo</strong>: são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, <strong>um soco que pode apresentar 80km/h</strong>.
       </p>
     </section>
   </article>
