Resolução exercício 4.5 - Adicionando uma imagem ilustrativa para cada seção

--- a/exercises/3_4/index.html
+++ b/exercises/3_4/index.html
@@ -19,6 +19,7 @@
   <article>
     <section>
       <h2>Informações Gerais do Camarão Mantis: <i>Odontodactylus Scyllarus</i></h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="Foto de um camarão mantis, estomatópode ou lacraia-do-mar"width="300">
       <table>
         <tr>
           <td>Reino</td>
@@ -40,30 +41,35 @@
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Olhos</h2>
+      <img src="https://4.bp.blogspot.com/-tF8BMxhyVYE/VVU8epgqcUI/AAAAAAAAA9w/LJm2NhsxjG0/s1600/o-MANTIS-SHRIMP-EYES-facebook.jpg" alt="Foto do olho de um Stomatopoda" width="300">
       <p>
         Impressionante é o olho de um camarão mantis - um animal marinho que não é um mantis nem um camarão, mas um parente próximo de caranguejos e lagostas. <strong>Seu olhos são compostos</strong>, feitos de milhares de pequenas unidades que cada um detecta a luz independentemente.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Se assemelham a satélites</h2>
+      <img src="https://cdn.prod.www.spiegel.de/images/e64187d2-0001-0004-0000-000000615604_w1200_r1_fpx49.13_fpy49.94.jpg" alt="Foto de camarão mantis" width="300">
       <p>
         O camarão mantis tem de 12 a 16 fotorreceptores diferentes em seus olhos. Mas eles são muito melhores em discriminar as cores do que a maioria dos outros animais! Eles parecem usar seus mais de dez receptores para reconhecer as cores de uma maneira única, muito diferente de outros animais, mas estranhamente <strong>semelhante a alguns satélites</strong>.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Visão Ultra Violeta (UV)</h2>
+      <img src="https://static.wixstatic.com/media/90fa72_6f7d0d94224f41188e2463fe1b5ccea1~mv2.jpg" alt="Foto de stomatopoda de perto" width="300" height="300">
       <p>
         Esses animais ultra-violentos (camarão mantis) também podem ver ultravioleta (UV), possui seis fotorreceptores dedicados a essa parte do espectro, cada um sintonizado em um comprimento de onda diferente, um <strong>sistema de detecção de UV</strong> mais complexo encontrado na natureza.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Visão com mais cores diferentes</h2>
+      <img src="https://mega.ibxk.com.br///2013/4/megacurioso/super-imagem/superimagem-megacurioso-36141004656419.jpg?w=1200&h=480&mode=crop" alt="Foto de camarão mantis inteiro" width="300">
       <p>
         Os camarões mantis vêem a cor com a ajuda de proteínas sensíveis à luz chamadas opsinas que formam a base de pigmentos visuais que reagem a diferentes comprimentos de onda da luz, <strong>permitindo ver cores diferentes</strong>. Se um camarão mantis tem seis receptores de UV, mas ele só tem duas opsinas sensíveis a diferentes sabores de UV.
       </p>
     </section>
     <section>
       <h2>Fatos sobre o Stomatopoda: Em resumo...</h2>
+      <img src="https://uploaddeimagens.com.br/images/002/754/553/full/soco-stomatopoda.png?1594155524" alt="Ilustração de um soco do stomatopoda" width="300">
       <p>
         Curiosidades sobre o Stomatopoda: Camarões Mantis têm uma maneira única de ver; O camarão Mantis possui olhos que se assemelham a um satélite; Olhos de camarão Mantis ultrapassam os aparelhos de DVD e inspiram novas tecnologias;<strong>O camarão mantis tem o soco mais rápido do mundo</strong>: são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, <strong>um soco que pode apresentar 80km/h</strong>.
       </p>
