Resolução exercicio 4.6 - Adicionando seção de referências Bibliográficas

--- a/exercises/3_4/index.html
+++ b/exercises/3_4/index.html
@@ -74,6 +74,14 @@
         Curiosidades sobre o Stomatopoda: Camarões Mantis têm uma maneira única de ver; O camarão Mantis possui olhos que se assemelham a um satélite; Olhos de camarão Mantis ultrapassam os aparelhos de DVD e inspiram novas tecnologias;<strong>O camarão mantis tem o soco mais rápido do mundo</strong>: são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, <strong>um soco que pode apresentar 80km/h</strong>.
       </p>
     </section>
+    <footer>
+      <h3>Referências bibliográficas:</h3>
+      <ul>
+        <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Stomatopoda no Wikipédia</a></li>
+        <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The Oatmeal - História em quadrinhos</a></li>
+      </ul>
+    </footer>
   </article>
+  
   </body>
 </html>
