Resolução exercício 5 - Adicionando conteúdo adjacente ao artigo

--- a/exercises/3_4/index.html
+++ b/exercises/3_4/index.html
@@ -82,6 +82,8 @@
       </ul>
     </footer>
   </article>
-  
+  <aside>
+    <p><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Veja um Stomatopoda em ação.</a></p>
+  </aside>
   </body>
 </html>
