Resolução exercício 6 - Adicionando um rodapé na página

--- a/exercises/3_4/index.html
+++ b/exercises/3_4/index.html
@@ -85,5 +85,8 @@
   <aside>
     <p><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE">Veja um Stomatopoda em ação.</a></p>
   </aside>
+  <footer>
+    CONTEÚDO COMPILADO POR: <em>ELCIO RODRIGO</em>
+  </footer>
   </body>
 </html>
