correções após achecker

--- a/exercises/3_4/index.html
+++ b/exercises/3_4/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>Curiosidades sobre o Stomatopoda</title>
   </head>
   <body>
     <!--insira os elementos aqui-->
@@ -18,7 +19,7 @@
   </nav>
   <article>
     <section>
-      <h2>Informações Gerais do Camarão Mantis: <i>Odontodactylus Scyllarus</i></h2>
+      <h2>Informações Gerais do Camarão Mantis: <em>Odontodactylus Scyllarus</em></h2>
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Odontodactylus_scyllarus1.jpg/250px-Odontodactylus_scyllarus1.jpg" alt="Foto de um camarão mantis, estomatópode ou lacraia-do-mar"width="300">
       <table>
         <tr>
