centralizando com divs e alterando css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Portfólio Web</title>
 </head>
 <body>
-    <ul>
-        <li><a href="#foto">Elcio Rodrigo de Azevedo</a></li>
-        <li><a href="#habilidades">Habilidades que possuo:</a></li>
-        <li><a href="#atualidade">O que faz na atualidade</a></li>
-    </ul>
+    <div class="habil">
+        <ul class="menu">
+            <li><a href="#foto">Elcio Rodrigo de Azevedo</a></li>
+            <li><a href="#habilidades">Habilidades que possuo:</a></li>
+            <li><a href="#atualidade">O que faz na atualidade</a></li>
+        </ul>
+    </div>
     <div id="box">
         <h1>ELCIO RODRIGO DE AZEVEDO</h1>
         <img id="foto" src="image.jpeg" alt="Elcio Rodrigo de Azevedo olhando para frente" width="300">
@@ -21,7 +23,7 @@
         Desde muito tempo tenho o interesse pela área mas já investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
     </div>
     
-    <div>
+    <div class="habil">
         <h2>Habilidades Pessoais</h2>
         <p id="habilidades">Ao longo da vida algumas das habilidades que possuo são:</p>
         <ul>
@@ -31,14 +33,18 @@
             <li class="pac">Ter paciência sempre</li>
         </ul>
     </div>
-    <h2 id="atualidade">O que faz na atualidade</h2>
-    <p>Atualmente me dedico a estudar, na área de tecnologia, <a href="https://www.betrybe.com/"><em>Desenvolvimento Web Full Stack na Trybe</em></a>. O curso terá duração de 1 ano e espero adquirir uma boa e sólida formação para ingressar no mercado de trabalho</p>
+    <div class="habil">
+        <h2 id="atualidade">O que faz na atualidade</h2>
+        <p class="atual">Atualmente me dedico a estudar, na área de tecnologia, <a href="https://www.betrybe.com/">Desenvolvimento Web Full Stack na Trybe</a>.<br> O curso terá duração de 1 ano e espero adquirir uma boa e sólida formação para ingressar no mercado de trabalho</p>
+    </div>
 
-    <ul>
-        <li><a href="#foto">Elcio Rodrigo de Azevedo</a></li>
-        <li><a href="#habilidades">Habilidades Pessoais</a></li>
-        <li><a href="#atualidade">O que faz na atualidade</a></li>
-    </ul>
+    <div class="habil">
+        <ul class="menu">
+            <li><a href="#foto">Elcio Rodrigo de Azevedo</a></li>
+            <li><a href="#habilidades">Habilidades Pessoais</a></li>
+            <li><a href="#atualidade">O que faz na atualidade</a></li>
+        </ul>
+    </div>
 
 </body>
 </html>
