--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="habil">
         <h2>Habilidades Pessoais</h2>
         <p id="habilidades">Ao longo da vida algumas das habilidades que possuo são:</p>
-        <ul>
+        <ul class="pessoal">
             <li class="ler">Gostar de ler e entender o que leio</li>
             <li class="ouvir">Saber ouvir e procurar ao máximo entender o que está sendo dito</li>
             <li class="resp">Saber respeitar mesmo quando não sou respeitado</li>
