--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p id="descricao"><em>Sou brasileiro</em> nascido em Santo André no estado de São Paulo e atualmente resido na <em>cidade de Natal no Rio Grande do Norte</em>.
         Gosto muito da <strong>área de tecnologia</strong> principalmente quando o assunto é <strong>programação</strong>.<br>
         Tenho muito interesse em aprender cada vez mais sobre essa área visando quando estiver capacitado ingressar no mercado de trabalho.<br>
-        Desde muito tempo tenho o interesse pela área mas já investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
+        Desde muito tempo tenho o interesse pela área de tecnologia, mas já investi visando a formação acadêmica em outras áreas do conhecimento como Letras e Filosofia mas sem sucesso.</p>
     </div>
     
     <div class="habil">
