--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="habil">
         <ul class="menu">
-            <li><a href="#foto">Elcio Rodrigo de Azevedo</a></li>
+            <li><a href="#foto">Élcio Rodrigo de Azevedo</a></li>
             <li><a href="#habilidades">Habilidades que possuo:</a></li>
             <li><a href="#atualidade">O que faz na atualidade</a></li>
         </ul>
@@ -40,7 +40,7 @@
 
     <div class="habil">
         <ul class="menu">
-            <li><a href="#foto">Elcio Rodrigo de Azevedo</a></li>
+            <li><a href="#foto">Élcio Rodrigo de Azevedo</a></li>
             <li><a href="#habilidades">Habilidades Pessoais</a></li>
             <li><a href="#atualidade">O que faz na atualidade</a></li>
         </ul>
